frame/support/test/tests/benchmark_ui/extrinsic_call_out_of_fn.stderr
error: `#[extrinsic_call]` must be in a benchmark function definition labeled with `#[benchmark]`.
 --> tests/benchmark_ui/extrinsic_call_out_of_fn.rs:3:1
  |
3 | #[extrinsic_call]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `extrinsic_call` (in Nightly builds, run with -Z macro-backtrace for more info)
