frame/support/test/tests/benchmark_ui/extrinsic_call_out_of_fn.rs
use frame_benchmarking::v2::*;

#[extrinsic_call]
mod stuff {}

fn main() {}
